test/error/32.c
int main(void){
    struct a;
    struct a k;
}